--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
     displayCookie();
 </script>
-
+<footer>
+    <p>&copy; Christopher Spinden November 18, 2025</p>
+</footer>
 </body>
 </html>
+
